@@ -38,7 +38,9 @@ import com.android.server.telecom.bluetooth.BluetoothRouteManager;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -145,13 +147,13 @@ public class AudioRoute {
     private AudioDeviceInfo mInfo;
     private boolean mIsDestRouteForWatch;
     private boolean mIsScoManagedByAudio;
-    public static final Set<Integer> BT_AUDIO_DEVICE_INFO_TYPES = Set.of(
+    public static final Set<Integer> BT_AUDIO_DEVICE_INFO_TYPES = new HashSet<>(Arrays.asList(
             AudioDeviceInfo.TYPE_BLE_HEADSET,
             AudioDeviceInfo.TYPE_BLE_SPEAKER,
             AudioDeviceInfo.TYPE_BLE_BROADCAST,
             AudioDeviceInfo.TYPE_HEARING_AID,
             AudioDeviceInfo.TYPE_BLUETOOTH_SCO
-    );
+    ));
 
     public static final Set<Integer> BT_AUDIO_ROUTE_TYPES = Set.of(
             AudioRoute.TYPE_BLUETOOTH_SCO,
@@ -201,7 +203,7 @@ public class AudioRoute {
         DEVICE_INFO_TYPE_TO_AUDIO_ROUTE_TYPE.put(AudioDeviceInfo.TYPE_BUS, TYPE_BUS);
     }
 
-    private static final HashMap<Integer, List<Integer>> AUDIO_ROUTE_TYPE_TO_DEVICE_INFO_TYPE;
+    public static final HashMap<Integer, List<Integer>> AUDIO_ROUTE_TYPE_TO_DEVICE_INFO_TYPE;
     static {
         AUDIO_ROUTE_TYPE_TO_DEVICE_INFO_TYPE = new HashMap<>();
         List<Integer> earpieceDeviceInfoTypes = new ArrayList<>();
@@ -248,6 +250,10 @@ public class AudioRoute {
 
     public int getType() {
         return mAudioRouteType;
+    }
+
+    public AudioDeviceInfo getInfo() {
+        return mInfo;
     }
 
     public boolean isWatch() {
@@ -325,8 +331,25 @@ public class AudioRoute {
                         && isSameDeviceType) {
                     mInfo = deviceInfo;
                 }
+                // Handle wired headset device address changes to ensure that we choose the right
+                // available device to set the communication device to.
+                if (mAudioRouteType == TYPE_WIRED && isSameDeviceType
+                        && !deviceInfo.equals(mInfo)) {
+                    Log.i(this, "onDestRouteAsPendingRoute: wired headset device changed, "
+                            + "update mInfo from %s to %s",
+                            mInfo == null ? "null" : audioDeviceTypeToString(mInfo.getType()),
+                            audioDeviceTypeToString(deviceInfo.getType()));
+                    mInfo = deviceInfo;
+                }
                 if (deviceInfo.equals(mInfo)) {
-                    result = audioManager.setCommunicationDevice(mInfo);
+                    if (!com.android.internal.telecom.flags.Flags.callAudioRouteRf()) {
+                        result = audioManager.setCommunicationDevice(mInfo);
+                        Log.i(this, "onDestRouteAsPendingRoute: route=%s, "
+                                + "AudioManager#setCommunicationDevice(%s)=%b", this,
+                                audioDeviceTypeToString(mInfo.getType()), result);
+                    } else {
+                        result = true;
+                    }
                     if (result) {
                         pendingAudioRoute.setCommunicationDeviceType(mAudioRouteType);
                         if (mAudioRouteType == TYPE_BLUETOOTH_SCO
@@ -335,9 +358,6 @@ public class AudioRoute {
                             pendingAudioRoute.addMessage(BT_AUDIO_CONNECTED, mBluetoothAddress);
                         }
                     }
-                    Log.i(this, "onDestRouteAsPendingRoute: route=%s, "
-                            + "AudioManager#setCommunicationDevice(%s)=%b", this,
-                            audioDeviceTypeToString(mInfo.getType()), result);
                     break;
                 }
             }
@@ -437,8 +457,9 @@ public class AudioRoute {
         }
 
         // Connect to the device (explicit handling for HFP devices).
-        boolean success = false;
-        if (device != null) {
+        // This is not needed with audio mode session API
+        boolean success = com.android.internal.telecom.flags.Flags.callAudioRouteRf();
+        if (device != null && !success) {
             success = bluetoothRouteManager.getDeviceManager()
                     .connectAudio(device, mAudioRouteType, mIsScoManagedByAudio);
         }
@@ -467,10 +488,12 @@ public class AudioRoute {
         // Only clear communication device if the destination route will be inactive; route to
         // route transitions do not require clearing the communication device.
         if (!pendingAudioRoute.isActive()) {
-            Log.i(this,
-                    "clearCommunicationDevice: AudioManager#clearCommunicationDevice, type=%s",
-                    DEVICE_TYPE_STRINGS.get(pendingAudioRoute.getCommunicationDeviceType()));
-            audioManager.clearCommunicationDevice();
+            if (!com.android.internal.telecom.flags.Flags.callAudioRouteRf()) {
+                Log.i(this, "clearCommunicationDevice: AudioManager#clearCommunicationDevice,"
+                        + " type=" + DEVICE_TYPE_STRINGS.get(
+                                pendingAudioRoute.getCommunicationDeviceType()));
+                audioManager.clearCommunicationDevice();
+            }
         }
 
         // Try to see if there's a previously set device for communication that should be cleared.
